--- a/app/package.json
+++ b/app/package.json
@@ -35,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://sangholee1990.github.io/web-front-reactClsOper"
 }
