--- a/20250531_appJquery/package.json
+++ b/20250531_appJquery/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   }, 
-  "homepage": "http://shlee1990.dothome.co.kr/green"
+  "homepage": "https://sangholee1990.github.io/green"
 }
